--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.3",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,11 +12,14 @@
     "@types/node": "^14.14.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "apollo-link-http": "^1.5.17",
     "axios": "^0.20.0",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.13.1",
     "react-scripts": "^3.4.4",
     "save": "^2.4.0",
     "styled-components": "^5.2.0",
