--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.0",
     "@types/react": "^16.9.53",
@@ -56,6 +57,7 @@
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^5.1.0",
     "prettier": "^2.1.2"
   }
 }
